load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "bb_mounter",
    embed = [":bb_mounter_lib"],
    importpath = "github.com/meroton/meroton/buildbarn/cmd/bb_mounter",
    visibility = ["//visibility:public"],
)

go_library(
    name = "bb_mounter_lib",
    srcs = ["main.go"],
    importpath = "github.com/meroton/meroton/buildbarn/cmd/bb_mounter",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_sys//unix"],
)
