load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_mounter_at_lib",
    srcs = ["main.go"],
    importpath = "github.com/meroton/meroton/buildbarn/cmd/bb_mounter_at",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_x_sys//unix",
        "@io_bazel_rules_go//go/runfiles",
    ],
)

go_binary(
    name = "bb_mounter_at",
    embed = [":bb_mounter_at_lib"],
    visibility = ["//visibility:public"],
)
