load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "mount",
    embed = [":mount_lib"],
    importpath = "github.com/meroton/meroton/prototype-mountat/cmd/mount",
    visibility = ["//visibility:public"],
)

go_library(
    name = "mount_lib",
    srcs = ["main.go"],
    importpath = "github.com/meroton/meroton/prototype-mountat/cmd/mounter",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_sys//unix"],
)
