load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mountat_lib",
    srcs = ["main.go"],
    importpath = "github.com/meroton/meroton/prototype-mountat/cmd/mountat",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_x_sys//unix",
        "@io_bazel_rules_go//go/runfiles",
    ],
)

go_binary(
    name = "mountat",
    data = ["//cmd/relative_unmount"],
    embed = [":mountat_lib"],
    visibility = ["//visibility:public"],
)
