load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/meroton/meroton/prototype-mountat/cmd/relative_unmount",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_sys//unix"],
)

go_binary(
    name = "relative_unmount",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)
